--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,50 +8,50 @@
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="-5dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp">
+    <!--<LinearLayout-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal"-->
+        <!--tools:layout_editor_absoluteX="-5dp"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--android:layout_marginTop="8dp">-->
 
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="397dp"
-            android:background="#0A0B0C"
-            app:srcCompat="@drawable/dark1" />
-    </LinearLayout>
+        <!--<ImageView-->
+            <!--android:id="@+id/imageView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="397dp"-->
+            <!--android:background="#0A0B0C"-->
+            <!--app:srcCompat="@drawable/dark1" />-->
+    <!--</LinearLayout>-->
 
-    <EditText
-        android:id="@+id/editText"
-        android:background="#FFFFFF"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Security Code"
-        android:textColorHint="#000000"
-        android:inputType="numberPassword"
-        tools:layout_editor_absoluteY="326dp"
-        tools:layout_editor_absoluteX="98dp" />
+    <!--<EditText-->
+        <!--android:id="@+id/editText"-->
+        <!--android:background="#FFFFFF"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:ems="10"-->
+        <!--android:hint="Security Code"-->
+        <!--android:textColorHint="#000000"-->
+        <!--android:inputType="numberPassword"-->
+        <!--tools:layout_editor_absoluteY="326dp"-->
+        <!--tools:layout_editor_absoluteX="98dp" />-->
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="50dp"
-        android:layout_height="35dp"
-        android:layout_weight="10"
-        android:text="Go"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="356dp" />
+    <!--<Button-->
+        <!--android:id="@+id/button"-->
+        <!--android:layout_width="50dp"-->
+        <!--android:layout_height="35dp"-->
+        <!--android:layout_weight="10"-->
+        <!--android:text="Go"-->
+        <!--tools:layout_editor_absoluteX="180dp"-->
+        <!--tools:layout_editor_absoluteY="356dp" />-->
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="500dp"
-        android:layout_height="198dp"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/maze"
-        tools:layout_editor_absoluteX="-4dp"
-        tools:layout_editor_absoluteY="405dp" />
+    <!--<ImageView-->
+        <!--android:id="@+id/imageView2"-->
+        <!--android:layout_width="500dp"-->
+        <!--android:layout_height="198dp"-->
+        <!--android:scaleType="centerCrop"-->
+        <!--app:srcCompat="@drawable/maze"-->
+        <!--tools:layout_editor_absoluteX="-4dp"-->
+        <!--tools:layout_editor_absoluteY="405dp" />-->
 </android.support.constraint.ConstraintLayout>
