--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.ibkxyz.anonymous.darkmobile.MainActivity"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
-    <!--<LinearLayout-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal"-->
-        <!--tools:layout_editor_absoluteX="-5dp"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--android:layout_marginTop="8dp">-->
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="397dp"
+        android:background="#0A0B0C"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/dark1" />
 
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="#FFFFFF"
+        android:ems="10"
+        android:hint="Security Code"
+        android:inputType="numberPassword"
+        android:textColorHint="#000000"
+        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteY="326dp" />
 
-        <!--<ImageView-->
-            <!--android:id="@+id/imageView"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="397dp"-->
-            <!--android:background="#0A0B0C"-->
-            <!--app:srcCompat="@drawable/dark1" />-->
-    <!--</LinearLayout>-->
+    <Button
+        android:id="@+id/button"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/editText"
+        android:text="Go"
+       />
 
-    <!--<EditText-->
-        <!--android:id="@+id/editText"-->
-        <!--android:background="#FFFFFF"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:ems="10"-->
-        <!--android:hint="Security Code"-->
-        <!--android:textColorHint="#000000"-->
-        <!--android:inputType="numberPassword"-->
-        <!--tools:layout_editor_absoluteY="326dp"-->
-        <!--tools:layout_editor_absoluteX="98dp" />-->
-
-    <!--<Button-->
-        <!--android:id="@+id/button"-->
-        <!--android:layout_width="50dp"-->
-        <!--android:layout_height="35dp"-->
-        <!--android:layout_weight="10"-->
-        <!--android:text="Go"-->
-        <!--tools:layout_editor_absoluteX="180dp"-->
-        <!--tools:layout_editor_absoluteY="356dp" />-->
-
-    <!--<ImageView-->
-        <!--android:id="@+id/imageView2"-->
-        <!--android:layout_width="500dp"-->
-        <!--android:layout_height="198dp"-->
-        <!--android:scaleType="centerCrop"-->
-        <!--app:srcCompat="@drawable/maze"-->
-        <!--tools:layout_editor_absoluteX="-4dp"-->
-        <!--tools:layout_editor_absoluteY="405dp" />-->
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="500dp"
+        android:layout_height="198dp"
+        android:layout_below="@+id/imageView"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/maze"
+        tools:layout_editor_absoluteX="-4dp"
+        tools:layout_editor_absoluteY="405dp" />
+</RelativeLayout>
